# streamlit_tfs_viewer

./: README.md  pyproject.toml  requirements.txt
tfs_viewer/: app.py  components.py  displays.py  figures.py  forms.py  upload.py
