[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "tfs_viewer/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["tfs_viewer"]

[project]
name = "tfs_viewer"
readme = "README.md"
description = "A Streamlit application to explore data in TFS files."
authors = [
    {name = "Felix Soubelet", email = "felix.soubelet@cern.ch"},
]
license = "MIT"
dynamic = ["version"]
requires-python = ">=3.9"

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "tfs-pandas >= 3.8",
    "matplotlib >= 3.8",
    "plotly >= 5.15",
    "streamlit >= 1.30",
]

[project.urls]
homepage = "https://github.com/fsoubelet/streamlit_tfs_viewer"
repository = "https://github.com/fsoubelet/streamlit_tfs_viewer"
